--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mini-message",
   "version": "0.0.0",
   "private": true,
+  "engines": { "node": "14.4.0" },
   "scripts": {
     "start": "node ./bin/www"
   },
